# Supply-Chain-Auditor-Env

./: .dockerignore  Dockerfile  README.md  grader_test.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: run_baseline.py
env/: environment.py  models.py  registry.py  reward.py
fixtures/: cve_db.json  dep_graph.json  packages.json  typosquat_db.json
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/: __init__.py  app.py
supply_chain_auditor_env.egg-info/: PKG-INFO  SOURCES.txt
tasks/: __init__.py  base.py  task_easy.py  task_hard.py  task_medium.py
