[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-auditor-env"
version = "1.0.0"
description = "OpenEnv environment for software supply chain security auditing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.104",
  "uvicorn>=0.24",
  "openai>=1.0",
  "openenv-core"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*", "graders*", "tasks*"]
